# smart-on-fhir-proxy

./: .dockerignore  .gitattributes  .gitignore  AGENT_SUPPORT.md  ALPHA_DEPLOYMENT_FIXES.md  CONTRIBUTING.md  Dockerfile  Dockerfile.keycloak  Dockerfile.mono  LICENSE  LICENSE-COMMERCIAL  LICENSE-DUAL.md  README.md  ROADMAP.md  application_result.json  codex-prompt.txt  docker-compose.development.yml  docker-compose.prod.yml  docker-compose.testing.yml  docker-compose.yml  eslint.config.js  fix-1.patch  fly.keycloak.toml  fly.toml  implementation_plan.json  implementation_targets.json  package-lock.json  package.json  proposed_implementation.json  reviewed_implementation.json
scripts/: README.md  UV_MIGRATION_GUIDE.md  ai-commit-comment.mjs  ai_fix_schema.py  ai_proposal_schema.py  apply-ai-fixes.py  apply-backend-fixes.py  apply-changes.py  apply-frontend-fixes.py  backend-apply-result.json  backend-test-proposals.json  backend-test-reviewed.json  base-tools.json  checklist-analyzer.py  checklist-updater.py  copy-ui-dist.js  count-targets.py  delay.js  friend-ai.py  frontend-apply-result.json  frontend-proposed-fixes.json  frontend-reviewed-fixes.json  frontend-test-proposals.json  frontend-test-result.json  frontend-test-reviewed.json  implementation-planner.py  install-dev.py  plan-to-requirements.py  propose-backend-fixes.py  propose-changes.py  propose-frontend-fixes.py  proposed-backend-fixes.json  proposed-frontend-fixes.json  pyproject.toml  requirements.txt  review-backend-fixes.py  review-changes.py  review-frontend-fixes.py  reviewed-backend-fixes.json  (+8 more)
(+641 files in other folders)
