[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proxy-smart-ai"
version = "1.0.0"
description = "AI-powered code analysis and fixing tools for Proxy Smart"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Proxy Smart Team", email = "dev@proxy-smart.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pathlib-abc>=0.1.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
    "selenium>=4.15.0",
    "Pygments>=2.16.0",
]

[project.optional-dependencies]
# Development tools
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0", 
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

# Testing dependencies  
test = [
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-mock>=3.11.0",
]

# Linting and security
lint = [
    "bandit>=1.7.0",
    "safety>=2.3.0",
]

# Semantic search (heavy ML dependencies)
semantic = [
    "torch>=1.11.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
]

[tool.hatch.build.targets.wheel]
# This is a collection of scripts, not a traditional package structure  
only-include = [
    "*.py",
    "*.md", 
    "*.txt",
    "*.toml",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
